--- a/shop-single.html
+++ b/shop-single.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     
     <!-- Site Meta -->
-    <title>Edulogy</title>
+    <title>Shop | Fesbeth Academy</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/prettyPhoto.css">
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!--[if lt IE 9]>
         <script src="js/vendor/html5shiv.min.js"></script>
@@ -72,13 +72,13 @@
                     <div class="row-fluid">
                         <div class="col-md-6 col-sm-6 text-left">
                             <p>
-                                <strong><i class="fa fa-phone"></i></strong> +90 543 123 45 67 &nbsp;&nbsp;
-                                <strong><i class="fa fa-envelope"></i></strong> <a href="mailto:#">info@yoursite.com</a>
+                                <strong><i class="fa fa-phone"></i></strong> +254 722 583 300 &nbsp;&nbsp;
+                                <strong><i class="fa fa-envelope"></i></strong> <a href="mailto:#">fesbethacademy@gmail.com</a>
                             </p>
                         </div><!-- end left -->
                         <div class="col-md-6 col-sm-6 hidden-xs text-right">
                             <div class="social">
-                                <a class="facebook" href="#" data-tooltip="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>              
+                                <a class="facebook" href="#" data-tooltip="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook"></i></a>
                                 <a class="twitter" href="#" data-tooltip="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter"></i></a>
                                 <a class="google" href="#" data-tooltip="tooltip" data-placement="bottom" title="Google Plus"><i class="fa fa-google-plus"></i></a>
                                 <a class="linkedin" href="#" data-tooltip="tooltip" data-placement="bottom" title="Linkedin"><i class="fa fa-linkedin"></i></a>
@@ -99,14 +99,14 @@
                             <span class="icon-bar"></span>
                         </button>
                         <div class="logo-normal">
-                            <a class="navbar-brand" href="index.html"><img src="images/logo-dark.png" alt=""></a>
+                            <a href="index.html"><h1 class="navbar-brand" style="color: black;">Fesbeth Academy</h1></a>
                         </div>
                     </div>
 
                     <div id="navbar" class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="index.html">Home</a></li>
-                            <li class="dropdown yamm-fw yamm-half"><a href="#" data-toggle="dropdown" class="dropdown-toggle active">Mega Menu <b class="fa fa-angle-down"></b></a>
+                            <li class="dropdown yamm-fw yamm-half"><a href="#" data-toggle="dropdown" class="dropdown-toggle active">Courses <b class="fa fa-angle-down"></b></a>
                                 <ul class="dropdown-menu">
                                     <li>
                                         <div class="yamm-content clearfix">
@@ -114,15 +114,17 @@
                                                 <div class="col-md-6 col-sm-6">
                                                     <h4>Course Pages</h4>
                                                     <ul>
-                                                        <li><a href="#">Courses Name 01</a></li>
-                                                        <li><a href="#">Courses Name 02</a></li>
-                                                        <li><a href="#">Courses Name 03</a></li>
-                                                        <li><a href="#">Courses Name 04</a></li>
-                                                        <li><a href="#">Courses Name 05</a></li>
-                                                        <li><a href="#">Courses Name 06</a></li>
-                                                        <li><a href="#">Courses Name 07</a></li>
-                                                        <li><a href="#">Courses Name 08</a></li>
-                                                        <li><a href="#">Courses Name 09</a></li>
+                                                        <li><a href="#">Day Care</a></li>
+                                                        <li><a href="#">PP1</a></li>
+                                                        <li><a href="#">PP2</a></li>
+                                                        <li><a href="#">Grade 1</a></li>
+                                                        <li><a href="#">Grade 2</a></li>
+                                                        <li><a href="#">Grade 3</a></li>
+                                                        <li><a href="#">Grade 4</a></li>
+                                                        <li><a href="#">Grade 5</a></li>
+                                                        <li><a href="#">Grade 6</a></li>
+                                                        <li><a href="#">Grade 7</a></li>
+                                                        <li><a href="#">Candidates</a></li>
                                                     </ul>
                                                 </div>
                                                 <div class="col-md-6 col-sm-6">
@@ -130,10 +132,10 @@
                                                         <div class="image-wrap entry">
                                                             <img src="upload/course_01.jpg" alt="" class="img-responsive">
                                                             <div class="magnifier">
-                                                                 <a href="#" title=""><i class="flaticon-add"></i></a>
+                                                                <a href="#" title=""><i class="flaticon-add"></i></a>
                                                             </div>
                                                         </div><!-- end image-wrap -->
-                                                        <h5><a href="#">Learning Bootstrap Framework</a></h5>
+                                                        <h5><a href="#">Grade 4</a></h5>
                                                         <small>$22.00</small>
                                                         <a href="#" class="menu-button">View Course</a>
                                                     </div><!-- end widget -->
@@ -143,26 +145,13 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li><a href="about.html">Events</a></li>
-                            <li class="dropdown hassubmenu">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Shop <span class="fa fa-angle-down"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="shop.html">Shop Layout</a></li>
-                                    <li><a href="shop-single.html">Shop Single</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown hassubmenu">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Blog <span class="fa fa-angle-down"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="blog.html">Blog Right Sidebar</a></li>
-                                    <li><a href="blog-1.html">Blog Left Sidebar</a></li>
-                                    <li><a href="blog-2.html">Blog Grid Sidebar</a></li>
-                                    <li><a href="blog-3.html">Blog Grid Fullwidth</a></li>
-                                    <li><a href="blog-single.html">Blog Single</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="page-contact.html">Contact</a></li>
-                            <li class="iconitem"><a href="#" data-toggle="modal" data-target="#login-modal"><i class="fa fa-search"></i></a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="fee-structure.html">Fee Structure</a></li>
+                            <li><a href="books-lists.html">Books Lists</a></li>
+                            <li><a href="shop.html" >Shop</a></li>
+                            <li><a href="blog.html" >Blog</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <!--                            <li class="iconitem"><a href="#" data-toggle="modal" data-target="#login-modal"><i class="fa fa-search"></i></a></li>-->
                             <li class="iconitem"><a class="shopicon" href="shop-cart.html"><i class="fa fa-shopping-basket"></i> &nbsp;(0)</a></li>
                         </ul>
                     </div>
@@ -170,7 +159,7 @@
             </div><!-- end container -->
         </header>
 
-        <section class="section cb">
+        <section class="section db">
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
@@ -180,8 +169,9 @@
                     </div><!-- end col -->
                     <div class="col-md-6 text-right">
                         <ul class="breadcrumb">
-                            <li><a href="javascript:void(0)">Edulogy</a></li>
-                            <li class="active">Shop</li>
+                            <li><a href="index.html">Fesbeth Academy</a></li>
+                            <li><a href="shop.html">Shop</a></li>
+                            <li class="active">Single Item</li>
                         </ul>
                     </div>
                 </div><!-- end row -->
