updated footer details

--- a/shop.html
+++ b/shop.html
@@ -612,12 +612,11 @@
                                         <button type="submit" class="btn btn-primary"><i class="fa fa-paper-plane-o"></i></button>
                                     </div>
                                 </form>
-                                <img src="images/payments.png" alt="" class="img-responsive">
                             </div><!-- end newsletter -->
                         </div><!-- end widget -->
                     </div><!-- end col -->
 
-                    <div class="col-lg-3 col-md-3">
+                    <div class="col-lg-4 col-md-4">
                         <div class="widget clearfix">
                             <h3 class="widget-title">Join us today</h3>
                             <p>Would you like to earn your profits by joining our team? Join us without losing time.</p>
@@ -625,37 +624,17 @@
                         </div><!-- end widget -->
                     </div><!-- end col -->
 
-                    <div class="col-lg-3 col-md-3">
-                        <div class="widget clearfix">
-                            <h3 class="widget-title">Popular Tags</h3>
-                            <div class="tags-widget">   
-                                <ul class="list-inline">
-                                    <li><a href="#">course</a></li>
-                                    <li><a href="#">web design</a></li>
-                                    <li><a href="#">development</a></li>
-                                    <li><a href="#">language</a></li>
-                                    <li><a href="#">teacher</a></li>
-                                    <li><a href="#">speaking</a></li>
-                                    <li><a href="#">material</a></li>
-                                    <li><a href="#">css3</a></li>
-                                    <li><a href="#">html</a></li>
-                                    <li><a href="#">learning</a></li>
-                                </ul>
-                            </div><!-- end list-widget -->
-                        </div><!-- end widget -->
-                    </div><!-- end col -->
-
-                    <div class="col-lg-2 col-md-2">
+                    <div class="col-lg-4 col-md-4">
                         <div class="widget clearfix">
                             <h3 class="widget-title">Support</h3>
-                            <div class="list-widget">   
+                            <div class="list-widget">
                                 <ul>
-                                    <li><a href="#">Terms of Use</a></li>
-                                    <li><a href="#">Copyrights</a></li>
-                                    <li><a href="#">Create a Ticket</a></li>
-                                    <li><a href="#">Pricing & Plans</a></li>
-                                    <li><a href="#">Carrier</a></li>
-                                    <li><a href="#">Trademark</a></li>
+                                    <li><a href="#">Contact Us</a></li>
+                                    <li><a href="#">Opening Dates</a></li>
+                                    <!--                                    <li><a href="#">Create a Ticket</a></li>-->
+                                    <!--                                    <li><a href="#">Pricing & Plans</a></li>-->
+                                    <!--                                    <li><a href="#">Carrier</a></li>-->
+                                    <!--                                    <li><a href="#">Trademark</a></li>-->
                                 </ul>
                             </div><!-- end list-widget -->
                         </div><!-- end widget -->
@@ -669,14 +648,14 @@
                 <div class="clearfix">
                     <div class="pull-left">
                         <div class="cop-logo">
-                            <a href="#"><img src="images/logo.png" alt=""></a>
+                            <a href="#" style="color: white;">Fesbeth Academy</a>
                         </div>
                     </div>
 
                     <div class="pull-right">
                         <div class="footer-links">
                             <ul class="list-inline">
-                                <li>Design : <a href="https://html.design">HTML.Design</a></li>
+                                <li>Design : <a href="https://newtonkiragu.github.io" target="_blank">Newton Karanu</a></li>
                             </ul>
                         </div>
                     </div>
