--- a/blog.html
+++ b/blog.html
@@ -72,8 +72,8 @@
                     <div class="row-fluid">
                         <div class="col-md-6 col-sm-6 text-left">
                             <p>
-                                <strong><i class="fa fa-phone"></i></strong> +254 722 583 300 &nbsp;&nbsp;
-                                <strong><i class="fa fa-envelope"></i></strong> <a href="mailto:#">fesbethacademy@gmail.com</a>
+                                <strong><i class="fa fa-phone"></i></strong><a href="tel:+254722583300"> +254 722 583 300 </a>
+                                <strong><i class="fa fa-envelope"></i></strong> <a href="mailto:fesbethacademy@gmail.com">fesbethacademy@gmail.com</a>
                             </p>
                         </div><!-- end left -->
                         <div class="col-md-6 col-sm-6 hidden-xs text-right">
