--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
                     </div><!-- end col -->
                     <div class="col-md-8">
                         <div class="custom-module p40l">
-                            <h2>We are a passionate <mark>primary school</mark> from<br>
-                            Kakamega. Empowering young children with <br>
-                            great social and academic skills</h2>
+                            <h2>We are a passionate <mark>primary school</mark> located<br>
+                             in Kakamega town. Empowering young children with <br>
+                            great social and academic skills.</h2>
 
-                            <p>At Fesbeth, We Not only provide the best quality education, but facilities as well</p>
+                            <p>At Fesbeth, we not only provide the best quality education, but good facilities as well. <br> Some of the facilities that the school offers are:</p>
 
                             <hr class="invis">
 
@@ -199,27 +199,24 @@
                                     <ul class="check">
                                         <li>Transport</li>
                                         <li>Libraries</li>
-                                        <li>Big Playing Field</li>
+                                        <li>Big Playing Ground</li>
                                         <li>Competitive Environment</li>
                                         <li>Computer Labs</li>
                                     </ul><!-- end check -->
                                 </div><!-- end col-lg-4 -->
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                                     <ul class="check">
-                                        <li>Boarding Facilities</li>
-                                        <li>Fun Environment</li>
-                                        <li>Skilled Educators</li>
-                                        <li>High Quality Support</li>
+                                        <li>Exellent Boarding Facilities</li>
+                                        <li>Fun time Environment</li>
+                                        <li>Skilled Educators (Teachers and Support Workers)</li>
+                                        <li>High Quality Individual Support</li>
                                         <li>Day School</li>
                                     </ul><!-- end check -->    
                                 </div><!-- end col-lg-4 -->
                                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 last">
                                     <ul class="check">
-                                        <li>Tea Breaks and Lunch</li>
-                                        <li>Cleaning Team</li>
-<!--                                        <li>Style Changers</li>-->
-<!--                                        <li>Footer Styles</li>-->
-<!--                                        <li>Header Styles</li>-->
+                                        <li>Tea Breaks and Lunch breaks</li>
+                                        <li>Reliable Cleaning Team</li>
                                     </ul><!-- end check -->
                                 </div><!-- end col-lg-4 --> 
                             </div><!-- end row -->   
@@ -240,7 +237,7 @@
             <div class="container">
                 <div class="section-title text-center">
                     <h3>Courses</h3>
-                    <p>At Fesbeth, we strive to provide the best education to our students</p>
+                    <p>At Fesbeth, we strive to provide the best education to our pupils</p>
                 </div><!-- end title -->
                 <div class="row">
                     <div class="col-md-6">
@@ -321,8 +318,8 @@
                     <div class="col-lg-4 col-md-4">
                         <div class="stat-count">
                             <h4 class="stat-timer">2000</h4>
-                            <h3><i class="flaticon-black-graduation-cap-tool-of-university-student-for-head"></i> Happy Students</h3>
-                            <p>Over 1500 students in the school.</p>
+                            <h3><i class="flaticon-black-graduation-cap-tool-of-university-student-for-head"></i> Happy pupils</h3>
+                            <p>Over 1500 pupils in the school.</p>
                         </div><!-- stat-count -->
                     </div><!-- end col -->
 
@@ -330,7 +327,7 @@
                         <div class="stat-count">
                             <h4 class="stat-timer">331</h4>
                             <h3><i class="flaticon-online-course"></i>Highschool Placement</h3>
-                            <p>Number of students who have successfully joined high school </p>
+                            <p>Number of pupils who have successfully joined high school.</p>
                         </div><!-- stat-count -->
                     </div><!-- end col -->
 
@@ -338,7 +335,7 @@
                         <div class="stat-count">
                             <h4 class="stat-timer">100</h4>
                             <h3><i class="flaticon-coffee-cup"></i>Staff</h3>
-                            <p>Over 70 teachers and staff to ensure your child's learning environment is comfortable</p>
+                            <p>Over 70 teachers and staff work hand in hand to ensure that your child's learning environment is comfortable and safe.</p>
                         </div><!-- stat-count -->
                     </div><!-- end col -->
                 </div><!-- end row -->
@@ -403,12 +400,12 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-4">
                         <div class="widget clearfix">
-                            <h3 class="widget-title">Subscribe Our Newsletter</h3>
+                            <h3 class="widget-title">Subscribe to Our Newsletter</h3>
                             <div class="newsletter-widget">
                                 <p>You can opt out of our newsletters at any time.<br> See our <a href="#">privacy policy</a>.</p>
                                 <form class="form-inline" role="search">
                                     <div class="form-1">
-                                        <input type="text" class="form-control" placeholder="Enter email here..">
+                                        <input type="text" class="form-control" placeholder="Enter your email here..">
                                         <button type="submit" class="btn btn-primary"><i class="fa fa-paper-plane-o"></i></button>
                                     </div>
                                 </form>
